force-app/main/default/objects/CampaignMember/fields/Campaign_completed__c.field-meta.xml
<CustomField>
    <fullName>Campaign_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Campaign completed?</label>
    <type>Checkbox</type>
</CustomField>