force-app/main/default/objects/CampaignMember/fields/Interacted__c.field-meta.xml
<CustomField>
    <fullName>Interacted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interacted?</label>
    <type>Checkbox</type>
</CustomField>