force-app/main/default/objects/CampaignMember/fields/Send_Campaign_Emails__c.field-meta.xml
<CustomField>
    <fullName>Send_Campaign_Emails__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Campaign Emails</label>
    <type>Checkbox</type>
</CustomField>