force-app/main/default/objects/CampaignMember/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Campaign Status</label>
    <length>65</length>
    <type>Text</type>
</CustomField>