force-app/main/default/objects/CampaignMember/validationRules/When_Campaign_Is_Inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>When_Campaign_Is_Inactive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Campaign.IsActive = FALSE, CampaignId &lt;&gt; NULL)</errorConditionFormula>
    <errorDisplayField>et4ae5__Activity__c</errorDisplayField>
    <errorMessage>Campaign is inactive</errorMessage>
</ValidationRule>